Added linkedin social icon

--- a/locales/en.default.json
+++ b/locales/en.default.json
@@ -22,6 +22,7 @@
         "facebook": "Facebook",
         "pinterest": "Pinterest",
         "instagram": "Instagram",
+        "linkedin": "LinkedIn",
         "tumblr": "Tumblr",
         "snapchat": "Snapchat",
         "youtube": "YouTube",
