--- a/locales/en.default.schema.json
+++ b/locales/en.default.schema.json
@@ -124,6 +124,10 @@
           "label": "Instagram",
           "info": "http://instagram.com/shopify"
         },
+        "social_linkedin_link": {
+          "label": "LinkedIn",
+          "info": "https://www.linkedin.com"
+        },
         "social_tiktok_link": {
           "label": "TikTok",
           "info": "https://tiktok.com/@shopify"
