--- a/locales/ro-RO.json
+++ b/locales/ro-RO.json
@@ -8,7 +8,7 @@
       "login_form_error": "Parolă incorectă!",
       "login_form_submit": "Accesați",
       "modal": "Dialogul modal Parolă",
-      "admin_link_html": "Sunteți proprietarul magazinului? <a href=\"/admin\" class=\"link underlined-link\">Conectați-vă aici</a>",
+      "admin_link_html": "Sunteți proprietarul magazinului? <a href=\"\/admin\" class=\"link underlined-link\">Conectați-vă aici<\/a>",
       "powered_by_shopify_html": "Acest magazin va fi pe platforma {{ shopify }}"
     },
     "social": {
@@ -45,6 +45,7 @@
     },
     "share": {
       "copy_to_clipboard": "Copiați linkul",
+      "share": "Distribuiți",
       "share_url": "Link",
       "success_message": "Linkul a fost copiat în clipboard",
       "close": "Închide partajarea"
@@ -78,6 +79,7 @@
     "article": {
       "blog": "Blog",
       "read_more_title": "Aflați mai mult: {{ title }}",
+      "read_more": "Aflați mai mult",
       "moderated": "Rețineți: comentariile trebuie să fie aprobate înainte de publicare.",
       "comment_form_title": "Scrieți un comentariu",
       "name": "Nume",
@@ -128,8 +130,8 @@
         "view_store_info": "Vizualizați informațiile despre magazin",
         "check_other_stores": "Vizualizați disponibilitatea la alte magazine",
         "pick_up_available": "Ridicare disponibilă",
-        "pick_up_available_at_html": "Ridicare disponibilă la <span class=\"color-foreground\">{{ location_name }}</span>",
-        "pick_up_unavailable_at_html": "Ridicare indisponibilă momentan la <span class=\"color-foreground\">{{ location_name }}</span>",
+        "pick_up_available_at_html": "Ridicare disponibilă la <span class=\"color-foreground\">{{ location_name }}<\/span>",
+        "pick_up_unavailable_at_html": "Ridicare indisponibilă momentan la <span class=\"color-foreground\">{{ location_name }}<\/span>",
         "unavailable": "Nu am putut încărca disponibilitatea pentru ridicare",
         "refresh": "Reîmprospătați"
       },
@@ -141,7 +143,7 @@
       },
       "view_full_details": "Vedeți detaliile complete",
       "include_taxes": "Taxe incluse.",
-      "shipping_policy_html": "<a href=\"{{ link }}\">Taxele de expediere</a> sunt calculate la finalizarea comenzii."
+      "shipping_policy_html": "<a href=\"{{ link }}\">Taxele de expediere<\/a> sunt calculate la finalizarea comenzii."
     },
     "modal": {
       "label": "Galerie media"
@@ -235,9 +237,9 @@
       "empty": "Coșul dvs. este gol",
       "cart_error": "A apărut o eroare în timpul actualizării coșului. Încercați din nou.",
       "cart_quantity_error_html": "Cantitatea maximă pe care o puteți adăuga în coș din acest articol: [quantity].",
-      "taxes_and_shipping_policy_at_checkout_html": "Taxele și <a href=\"{{ link }}\">transportul</a> sunt calculate la finalizarea comenzii",
+      "taxes_and_shipping_policy_at_checkout_html": "Taxele și <a href=\"{{ link }}\">transportul<\/a> sunt calculate la finalizarea comenzii",
       "taxes_included_but_shipping_at_checkout": "Taxele sunt incluse și transportul este calculat la finalizarea comenzii",
-      "taxes_included_and_shipping_policy_html": "Taxele sunt incluse. <a href=\"{{ link }}\">Transportul</a> este calculat la finalizarea comenzii.",
+      "taxes_included_and_shipping_policy_html": "Taxele sunt incluse. <a href=\"{{ link }}\">Transportul<\/a> este calculat la finalizarea comenzii.",
       "taxes_and_shipping_at_checkout": "Taxele și transportul sunt calculate la finalizarea comenzii",
       "update": "Actualizați",
       "headings": {
@@ -248,11 +250,12 @@
       },
       "login": {
         "title": "Ai un cont?",
-        "paragraph_html": "<a href=\"{{ link }}\" class=\"link underlined-link\">Conectează-te</a> pentru a finaliza comanda mai rapid."
+        "paragraph_html": "<a href=\"{{ link }}\" class=\"link underlined-link\">Conectează-te<\/a> pentru a finaliza comanda mai rapid."
       }
     },
     "footer": {
-      "payment": "Metode de plată"
+      "payment": "Metode de plată",
+      "social_placeholder": "Urmăriți-ne pe rețelele sociale"
     },
     "featured_blog": {
       "view_all": "Afișați tot",
@@ -269,17 +272,26 @@
     "collection_template": {
       "title": "Colecție",
       "empty": "Nu s-au găsit produse",
-      "use_fewer_filters_html": "Utilizați mai puține filtre sau <a class=\"{{ class }}\" href=\"{{ link }}\">goliți tot</a>"
+      "use_fewer_filters_html": "Utilizați mai puține filtre sau <a class=\"{{ class }}\" href=\"{{ link }}\">goliți tot<\/a>",
+      "product_count": {
+        "few": "{{ product_count }} din {{ count }} produse"
+      },
+      "filters_selected": {
+        "few": "{{ count }} selectate"
+      },
+      "product_count_simple": {
+        "few": "{{ count }} produse"
+      }
     },
     "video": {
       "load_video": "Încarcă clipul video: {{ description }}"
     }
   },
   "localization": {
-    "country_label": "Țară/Regiune",
+    "country_label": "Țară\/Regiune",
     "language_label": "Limbă",
     "update_language": "Actualizați limba",
-    "update_country": "Actualizați țara/regiunea"
+    "update_country": "Actualizați țara\/regiunea"
   },
   "customer": {
     "account": {
@@ -310,7 +322,7 @@
       "address1": "Adresa 1",
       "address2": "Adresa 2",
       "city": "Localitate",
-      "country": "Țară/Regiune",
+      "country": "Țară\/Regiune",
       "province": "Provincie",
       "zip": "Cod poștal",
       "phone": "Număr de telefon",
